--- a/_includes/article/footer/author-profile.html
+++ b/_includes/article/footer/author-profile.html
@@ -1,5 +1,5 @@
 {%- assign _author = include.author -%}
-{%- if _author.type == 'organization'-%}
+{%- if _author.type == 'organization' -%}
   {%- assign _author_itemtype = 'http://schema.org/Organization' -%}
 {%- else -%}
   {%- assign _author_itemtype = 'http://schema.org/Person' -%}
@@ -10,11 +10,9 @@
     {%- if _author.url -%}
       <a href="{{ _author.url }}" class="item__image">
     {%- endif -%}
-    
         {%- include snippets/get-nav-url.html path=_author.avatar -%}
         {%- assign _author_avatar = __return -%}
-        <img class="author-profile__avatar" itemprop="image" src="{{ _author_avatar }}" />
-
+        <img class="author-profile__avatar" itemprop="image" src="{{ _author_avatar }}" alt="Author avatar" />
     {%- if _author.url -%}
       </a>
     {%- endif -%}
@@ -24,18 +22,17 @@
     {%- if _author.name -%}
       <meta itemprop="name" content="{{ _author.name }}" />
       <p class="author-profile__name">
+        
         {%- if _author.url -%}
           <meta itemprop="url" content="{{ _author.url }}" />
           <a href="{{ _author.url }}">
         {%- endif -%}
-        
             {{ _author.name }}
-
         {%- if _author.url -%}
           </a>
         {%- endif -%}
       </p>
-    {%- endif -%} 
+    {%- endif -%}
     
     {%- if _author.bio -%}
       <p itemprop="description">{{ _author.bio }}</p>
