--- a/_includes/comments-providers/gitalk.html
+++ b/_includes/comments-providers/gitalk.html
@@ -6,7 +6,9 @@
 		}
 	</style>
 
-	{%- include snippets/get-sources.html -%} {%- assign _sources = __return -%}
+	{%- include snippets/get-sources.html -%}
+	{%- assign _sources = __return -%}
+
 	<div class="gitalk-wrapper" id="js-gitalk-container"></div>
 
 	{%- assign _admin = '' -%}
@@ -15,7 +17,8 @@
 		{%- assign _admin = _admin | append: ", '" | append: _admin_id | append: "'" -%}
 	{%- endfor -%}
 
-	{%- assign _last = _admin | size | minus: 1 -%} {%- assign _admin = _admin | slice: 2, _last -%}
+	{%- assign _last = _admin | size | minus: 1 -%}
+	{%- assign _admin = _admin | slice: 2, _last -%}
 
 	<link rel="stylesheet" href="https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.css">
 	<script src="https://cdn.bootcss.com/gitalk/1.8.0/gitalk.min.js"></script>
