--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -52,7 +52,8 @@
         {%- assign _c_index = 4 -%}
       {%- endif -%}
       
-      <li><button type="button" class="button button--pill tag-button tag-button-{{ _c_index }}" data-encode="{{ _tag[0] | strip | url_encode }}">
+      <li>
+        <button type="button" class="button button--pill tag-button tag-button-{{ _c_index }}" data-encode="{{ _tag[0] | strip | url_encode }}">
           <span>{{ _tag[0] | strip }}</span><div class="tag-button__count">{{ _tag[1].size }}</div>
         </button>
       </li>
