--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -226,9 +226,9 @@ details > summary::marker {
       tr {
         border-bottom: 1px solid var(--tb-border-color);
 
-        &:nth-child(2n) {
-          background-color: var(--tb-even-bg);
-        }
+        // &:nth-child(2n) {
+        //   background-color: var(--tb-even-bg);
+        // }
 
         &:nth-child(2n + 1) {
           background-color: var(--tb-odd-bg);
