--- a/_includes/markdown-enhancements/mathjax.html
+++ b/_includes/markdown-enhancements/mathjax.html
@@ -122,4 +122,4 @@
     },
   };
 </script>
-<script type="text/javascript" id="MathJax-script" async src="{{ _sources.mathjax }}"></script>
+<script async type="text/javascript" id="MathJax-script" src="{{ _sources.mathjax }}"></script>
