--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,5 @@
 /* start custom scss snippet */
-
+// body {
+//   font-family: "Times New Roman", "SimSun", serif;
+// }
 /* end custom scss snippet */
