--- a/_includes/article/footer/author-profile.html
+++ b/_includes/article/footer/author-profile.html
@@ -10,9 +10,11 @@
     {%- if _author.url -%}
       <a href="{{ _author.url }}" class="item__image">
     {%- endif -%}
-        {%- include snippets/get-nav-url.html path=_author.avatar -%}
-        {%- assign _author_avatar = __return -%}
-        <img class="author-profile__avatar" itemprop="image" src="{{ _author_avatar }}" alt="Author avatar" />
+
+    {%- include snippets/get-nav-url.html path=_author.avatar -%}
+    {%- assign _author_avatar = __return -%}
+    <img class="author-profile__avatar" itemprop="image" src="{{ _author_avatar }}" alt="Author avatar">
+
     {%- if _author.url -%}
       </a>
     {%- endif -%}
@@ -20,24 +22,24 @@
 
   <div class="item__content">
     {%- if _author.name -%}
-      <meta itemprop="name" content="{{ _author.name }}" />
+      <meta itemprop="name" content="{{ _author.name }}">
+
       <p class="author-profile__name">
-        
         {%- if _author.url -%}
-          <meta itemprop="url" content="{{ _author.url }}" />
+          <meta itemprop="url" content="{{ _author.url }}">
           <a href="{{ _author.url }}">
         {%- endif -%}
-            {{ _author.name }}
+        {{ _author.name }}
         {%- if _author.url -%}
           </a>
         {%- endif -%}
       </p>
     {%- endif -%}
-    
+
     {%- if _author.bio -%}
       <p itemprop="description">{{ _author.bio }}</p>
     {%- endif -%}
-    
+
     <div class="author-profile__links">
       {%- include author-links.html author=_author -%}
     </div>
