--- a/_includes/markdown-enhancements/mermaid.html
+++ b/_includes/markdown-enhancements/mermaid.html
@@ -4,7 +4,7 @@
 <script>
   window.Lazyload.js('{{ _sources.mermaid }}', function () {
     mermaid.initialize({
-      startOnLoad: true
+      startOnLoad: true,
     });
     mermaid.init(undefined, '.language-mermaid');
   });
