--- a/_sass/components/_article-footer.scss
+++ b/_sass/components/_article-footer.scss
@@ -3,7 +3,8 @@
   font-size: map-get($base, font-size-sm);
 }
 
-.article__license, .article__subscribe {
+.article__license,
+.article__subscribe {
   a {
     @include link-colors($text-color, $main-color-1);
   }
@@ -11,6 +12,7 @@
 
 .article__license {
   color: $text-color-l;
+
   img {
     height: map-get($base, font-size) * 1.6;
   }
