--- a/_sass/components/_extensions.scss
+++ b/_sass/components/_extensions.scss
@@ -3,10 +3,13 @@
   @extend .d-print-none;
 }
 
-.extensions--video, .extensions--slide, .extensions--demo {
+.extensions--video,
+.extensions--slide,
+.extensions--demo {
   position: relative;
   width: 100%;
   padding: 0;
+
   & > iframe {
     position: absolute;
     top: 0;
