--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,14 +1,35 @@
 // sm——小屏幕设备，md——中等屏幕设备，lg——大屏幕设备，xl——超大屏幕设备，xs——极小屏幕设备
 $base: (
+  // font-family: (
+  //   -apple-system,
+  //   BlinkMacSystemFont,
+  //   "Segoe UI",
+  //   Helvetica,
+  //   Arial,
+  //   sans-serif,
+  // ),
+  // font-family-code: (
+  //   Menlo,
+  //   Monaco,
+  //   Consolas,
+  //   Andale Mono,
+  //   lucida console,
+  //   Courier New,
+  //   monospace,
+  // ),
   font-family: (
     -apple-system,
     BlinkMacSystemFont,
+    "Times New Roman",
+    "SimSun",
     "Segoe UI",
     Helvetica,
     Arial,
     sans-serif,
   ),
   font-family-code: (
+    "DejaVu Sans Mono",
+    "SimSun",
     Menlo,
     Monaco,
     Consolas,
@@ -17,6 +38,7 @@ $base: (
     Courier New,
     monospace,
   ),
+
   font-size-root: 16px,
   font-size-root-sm: 14px,
 
