Restores MathJax lazy loading to ensure experience and page loading speed.

--- a/_includes/markdown-enhancements/mathjax.html
+++ b/_includes/markdown-enhancements/mathjax.html
@@ -17,6 +17,9 @@
     svg: {
       fontCache: 'global', // none or global or local
     },
+    loader: {
+      load: ['ui/lazy'],
+    },
     output: {
       font: 'mathjax-tex',
     },
