--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,9 @@
         {%- endif -%}
       </div>
 
+      {%- if site.search.provider -%}
+        <button class="button button--secondary button--circle search-button js-search-toggle"><i class="fas fa-search"></i></button>
+      {%- endif -%}
     </div>
 
     {%- if site.data.navigation.header -%}
