--- a/_sass/scroll-to-top.scss
+++ b/_sass/scroll-to-top.scss
@@ -1,7 +1,7 @@
 #scroll-to-top {
   position: fixed;
   z-index: 1;
-  bottom: calc(6rem - 2.75rem / 2);
+  bottom: 4.625rem;
   right: 1rem;
   display: none;
   width: 2.75rem;
@@ -12,9 +12,8 @@
   line-height: 40px;
   font-size: 24px;
   color: #686868;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px #00000033;
   cursor: pointer;
-  transition: opacity 0.3s;
   padding: 0;
   border: 1px solid #f1f1f1;
   transition: opacity 0.5s ease-in-out, transform 0.2s ease-out;
