Formatting CSS styles

--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,22 +1,5 @@
-// sm——小屏幕设备，md——中等屏幕设备，lg——大屏幕设备，xl——超大屏幕设备，xs——极小屏幕设备
+/* sm——小屏幕设备，md——中等屏幕设备，lg——大屏幕设备，xl——超大屏幕设备，xs——极小屏幕设备 */
 $base: (
-  // font-family: (
-  //   -apple-system,
-  //   BlinkMacSystemFont,
-  //   "Segoe UI",
-  //   Helvetica,
-  //   Arial,
-  //   sans-serif,
-  // ),
-  // font-family-code: (
-  //   Menlo,
-  //   Monaco,
-  //   Consolas,
-  //   Andale Mono,
-  //   lucida console,
-  //   Courier New,
-  //   monospace,
-  // ),
   font-family: (
     -apple-system,
     BlinkMacSystemFont,
