--- a/_sass/common/components/_button.scss
+++ b/_sass/common/components/_button.scss
@@ -6,10 +6,12 @@
   cursor: pointer;
   outline: none;
   @include user-select(none);
+
   svg {
     width: 1.1rem;
     height: 1.1rem;
   }
+
   @include disabled() {
     cursor: not-allowed;
   }
@@ -95,13 +97,23 @@
 .button--outline-theme-light {
   color: $main-color-theme-light;
   border: 1px solid $main-color-theme-light;
-  @include clickable($main-color-theme-light, transparent, $text-color-theme-dark, $main-color-theme-light);
+  @include clickable(
+    $main-color-theme-light,
+    transparent,
+    $text-color-theme-dark,
+    $main-color-theme-light
+  );
 }
 
 .button--outline-theme-dark {
   color: $main-color-theme-dark;
   border: 1px solid $main-color-theme-dark;
-  @include clickable($main-color-theme-dark, transparent, $text-color-theme-light, $main-color-theme-dark);
+  @include clickable(
+    $main-color-theme-dark,
+    transparent,
+    $text-color-theme-light,
+    $main-color-theme-dark
+  );
 }
 
 .button--pill {
@@ -125,6 +137,7 @@
 .button--md {
   padding: map-get($button, padding-y) map-get($button, padding-x);
   font-size: map-get($base, font-size);
+
   &.button--circle {
     width: map-get($button, circle-diameter);
     height: map-get($button, circle-diameter);
@@ -134,6 +147,7 @@
 .button--xs {
   padding: map-get($button, padding-y-xs) map-get($button, padding-x-xs);
   font-size: map-get($base, font-size-xs);
+
   &.button--circle {
     width: map-get($button, circle-diameter-xs);
     height: map-get($button, circle-diameter-xs);
@@ -143,6 +157,7 @@
 .button--sm {
   padding: map-get($button, padding-y-sm) map-get($button, padding-x-sm);
   font-size: map-get($base, font-size-sm);
+
   &.button--circle {
     width: map-get($button, circle-diameter-sm);
     height: map-get($button, circle-diameter-sm);
@@ -152,6 +167,7 @@
 .button--lg {
   padding: map-get($button, padding-y-lg) map-get($button, padding-x-lg);
   font-size: map-get($base, font-size-lg);
+
   &.button--circle {
     width: map-get($button, circle-diameter-lg);
     height: map-get($button, circle-diameter-lg);
@@ -161,6 +177,7 @@
 .button--xl {
   padding: map-get($button, padding-y-xl) map-get($button, padding-x-xl);
   font-size: map-get($base, font-size-xl);
+
   &.button--circle {
     width: map-get($button, circle-diameter-xl);
     height: map-get($button, circle-diameter-xl);
