--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -11,6 +11,7 @@ html,
     .page__grid {
       height: 100%;
     }
+
     @include media-breakpoint-down(lg) {
       .page__main {
         @include overflow(unset);
@@ -22,8 +23,10 @@ html,
 .page__main {
   height: 100%;
   color: $text-color;
+
   .col-aside {
     display: none;
+
     & > aside {
       position: absolute;
       width: map-get($layout, aside-width);
@@ -44,10 +47,12 @@ html,
   @include flex(1);
   width: 100%;
   margin: 0 auto;
+
   @media print {
     padding-bottom: 0;
   }
 }
+
 .hide-footer {
   .page__content {
     padding-bottom: 0;
@@ -82,21 +87,25 @@ html,
   @include split-line(right);
   @include transition(transform map-get($animation, duration));
   @include overflow(auto);
+
   .sidebar-toc {
     padding: map-get($spacers, 3) map-get($spacers, 3) map-get($spacers, 4) map-get($spacers, 4);
   }
 }
+
 .sidebar-button {
-  @include clickable($text-color-d, rgba($main-color-3, .75));
+  @include clickable($text-color-d, rgba($main-color-3, 0.75));
 }
 
 .page__mask {
   @include modal(map-get($z-indexes, mask));
   cursor: pointer;
 }
+
 .layout--page--sidebar {
   .page__main {
     @include overflow(auto);
+
     @media print {
       @include overflow(unset);
     }
@@ -108,12 +117,14 @@ html,
     position: relative;
     display: block;
     width: map-get($layout, aside-width);
+
     & > aside {
       &.fixed {
         position: fixed;
         -webkit-font-smoothing: subpixel-antialiased;
       }
     }
+
     @include media-breakpoint-down(lg) {
       display: none;
     }
@@ -134,9 +145,11 @@ html,
     .page__actions {
       visibility: hidden;
     }
+
     .page__sidebar {
       @include transform(translate(0));
     }
+
     .page__mask {
       @include modal--show();
     }
@@ -148,6 +161,7 @@ html,
     color: $text-color-theme-light;
   }
 }
+
 .hero--dark {
   .article__info {
     color: $text-color-theme-dark;
@@ -159,6 +173,7 @@ html,
     position: absolute;
     width: 100%;
   }
+
   .hero__content {
     padding-top: map-get($layout, header-height);
   }
