--- a/_sass/addon/colors.scss
+++ b/_sass/addon/colors.scss
@@ -1,25 +1,25 @@
 @mixin light-scheme {
-    --text-muted-highlight-color: inherit;
-    --blockquote-border-color: #eeeeee;
-    --blockquote-text-color: #757575;
-    --tb-odd-bg: #fbfcfd;
-    --tb-border-color: #eaeaea;
-    --tb-even-bg: rgb(31, 31, 34);
-    --prompt-text-color: rgb(46, 46, 46, 0.77);
-    --prompt-tip-bg: rgb(123, 247, 144, 0.2);
-    --prompt-tip-icon-color: #03b303;
-    --prompt-info-bg: #e1f5fe;
-    --prompt-info-icon-color: #0070cb;
-    --prompt-warning-bg: rgb(255, 243, 205);
-    --prompt-warning-icon-color: #ef9c03;
-    --prompt-danger-bg: rgb(248, 215, 218, 0.56);
-    --prompt-danger-icon-color: #df3c30;
+  --text-muted-highlight-color: inherit;
+  --blockquote-border-color: #eeeeee;
+  --blockquote-text-color: #757575;
+  --tb-odd-bg: #fbfcfd;
+  --tb-border-color: #eaeaea;
+  --tb-even-bg: rgb(31, 31, 34);
+  --prompt-text-color: rgb(46, 46, 46, 0.77);
+  --prompt-tip-bg: rgb(123, 247, 144, 0.2);
+  --prompt-tip-icon-color: #03b303;
+  --prompt-info-bg: #e1f5fe;
+  --prompt-info-icon-color: #0070cb;
+  --prompt-warning-bg: rgb(255, 243, 205);
+  --prompt-warning-icon-color: #ef9c03;
+  --prompt-danger-bg: rgb(248, 215, 218, 0.56);
+  --prompt-danger-icon-color: #df3c30;
 
-    [class^='prompt-'] {
-        --link-underline-color: rgb(219, 216, 216);
-    }
+  [class^="prompt-"] {
+    --link-underline-color: rgb(219, 216, 216);
+  }
 
-    .dark {
-        display: none;
-    }
+  .dark {
+    display: none;
+  }
 }
