--- a/_sass/clipboard.scss
+++ b/_sass/clipboard.scss
@@ -1,3 +1,7 @@
+/* html 文件位于 */
+/* js 文件位于 _include/scripts/clipboard.js */
+/* 被引用在 _layout/article.html */
+
 .copy-success {
   background-color: #4CAF50;
   transition: background-color 1s ease-out;
