--- a/_sass/common/classes/_clickable.scss
+++ b/_sass/common/classes/_clickable.scss
@@ -1,8 +1,18 @@
-@mixin clickable($clr, $bg-clr, $hover-clr: default, $hover-bg-clr: default, $active-clr: default, $active-bg-clr: default, $focus-clr: default, $focus-bg-clr: default, $theme: default, $ignore-path: default) {
-
+@mixin clickable(
+  $clr,
+  $bg-clr,
+  $hover-clr: default,
+  $hover-bg-clr: default,
+  $active-clr: default,
+  $active-bg-clr: default,
+  $focus-clr: default,
+  $focus-bg-clr: default,
+  $theme: default,
+  $ignore-path: default
+) {
   @if $theme == default {
     @if $bg-clr == null and $hover-bg-clr == null {
-      @if $hover-clr == default {
+      @if $hover-clr ==default {
         $theme: get-color-theme($clr);
       } @else {
         $theme: get-color-theme($hover-clr);
@@ -23,6 +33,7 @@
   }
 
   @include transition(map-get($clickable, transition));
+
   @if $ignore-path == false {
     svg {
       path {
@@ -37,6 +48,7 @@
       @if $theme == "light" {
         $hover-clr: darken($clr, 14%);
       }
+
       @if $theme == "dark" {
         $hover-clr: lighten($clr, 18%);
       }
@@ -49,6 +61,7 @@
     @if $theme == "light" {
       $hover-bg-clr: darken($bg-clr, 14%);
     }
+
     @if $theme == "dark" {
       $hover-bg-clr: lighten($bg-clr, 18%);
     }
@@ -56,14 +69,15 @@
 
   // active
   @if $active-clr == default {
-    @if $active-bg-clr == null {
+    @if $active-bg-clr ==null {
       @if $theme == "light" {
         $active-clr: darken($hover-clr, 15%);
       }
+
       @if $theme == "dark" {
         $active-clr: lighten($hover-clr, 16%);
       }
-    } @else if $active-bg-clr == default {
+    } @else if $active-bg-clr ==default {
       $active-clr: $hover-clr;
     }
   }
@@ -72,6 +86,7 @@
     @if $theme == "light" {
       $active-bg-clr: darken($hover-bg-clr, 15%);
     }
+
     @if $theme == "dark" {
       $active-bg-clr: lighten($hover-bg-clr, 16%);
     }
@@ -79,9 +94,9 @@
 
   // focus
   @if $focus-clr == default {
-    @if $focus-bg-clr == null {
+    @if $focus-bg-clr ==null {
       $focus-clr: $hover-clr;
-    } @else if $hover-bg-clr == default {
+    } @else if $hover-bg-clr ==default {
       $focus-clr: $hover-clr;
     }
   }
@@ -92,66 +107,82 @@
 
   @include plain() {
     color: $clr;
+
     @if $bg-clr {
       background-color: $bg-clr;
     }
+
     @if $ignore-path == false {
       svg path {
         fill: $clr;
       }
     }
   }
+
   @include hover() {
     color: $hover-clr;
+
     @if $hover-bg-clr {
       background-color: $hover-bg-clr;
     }
+
     @if $ignore-path == false {
       svg path {
         fill: $hover-clr;
       }
     }
   }
+
   @include active() {
     color: $active-clr;
+
     @if $active-bg-clr {
       background-color: $active-bg-clr;
     }
+
     @if $ignore-path == false {
       svg path {
         fill: $active-clr;
       }
     }
   }
+
   @include focus() {
     color: $focus-clr;
-    @if $focus-bg-clr{
+
+    @if $focus-bg-clr {
       background-color: $focus-bg-clr;
-      box-shadow: 0 0 0 2px rgba($focus-bg-clr, .4);
+      box-shadow: 0 0 0 2px rgba($focus-bg-clr, 0.4);
     }
+
     @if $ignore-path == false {
       svg path {
         fill: $focus-clr;
       }
     }
   }
+
   @include disabled() {
     @if $theme == "light" {
-      color: rgba($clr, .2) !important;
+      color: rgba($clr, 0.2) !important;
     }
+
     @if $theme == "dark" {
-      color: rgba($clr, .4) !important;
+      color: rgba($clr, 0.4) !important;
     }
+
     @if $bg-clr {
       background-color: $bg-clr !important;
     }
+
     @if $ignore-path == false {
       svg path {
         @if $theme == "light" {
-          fill: rgba($clr, .2) !important;
+          fill: rgba($clr, 0.2) !important;
         }
+
         @if $theme == "dark" {
-          fill: rgba($clr, .4) !important;
+          fill: rgba($clr, 0.4) !important;
         }
       }
     }
