--- a/_sass/common/components/_menu.scss
+++ b/_sass/common/components/_menu.scss
@@ -2,6 +2,7 @@
   @if $direction == default {
     $direction: "horizontal";
   }
+
   @if $direction == "vertical" {
     @include flex-direction(column);
   } @else {
@@ -9,27 +10,40 @@
   }
 }
 
-@mixin menu($horizontal-spacer: default, $horizontal-item-vertical-spacer: default, $wrap: default) {
+@mixin menu(
+  $horizontal-spacer: default,
+  $horizontal-item-vertical-spacer: default,
+  $wrap: default
+) {
   @if $horizontal-spacer == default {
     $horizontal-spacer: map-get($menu, horizontal-spacer);
   }
+
   @if $horizontal-item-vertical-spacer == default {
-    $horizontal-item-vertical-spacer: map-get($menu, horizontal-item-vertical-spacer);
+    $horizontal-item-vertical-spacer: map-get(
+      $menu,
+      horizontal-item-vertical-spacer
+    );
   }
+
   @if $wrap == default {
     $wrap: wrap;
   }
+
   @include flexbox();
   @include flex-wrap($wrap);
   margin-top: 0;
   margin-bottom: 0;
+
   & > li {
     @if $horizontal-item-vertical-spacer {
       margin-top: map-get($spacers, $horizontal-item-vertical-spacer);
       margin-bottom: map-get($spacers, $horizontal-item-vertical-spacer);
     }
+
     margin-right: map-get($spacers, $horizontal-spacer);
     list-style-type: none;
+
     &:last-child {
       margin-right: 0;
     }
@@ -45,6 +59,7 @@
 .menu--vertical {
   @include menu-direction("vertical");
   @include align-items(normal);
+
   & > li {
     margin-right: 0;
   }
