--- a/_sass/common/components/_modal.scss
+++ b/_sass/common/components/_modal.scss
@@ -2,12 +2,15 @@
   @if $z-index == default {
     $z-index: map-get($z-indexes, modal);
   }
+
   @if $color == default {
     $color: $text-color-theme-dark;
   }
+
   @if $background-color == default {
     $background-color: $mask-color;
   }
+
   position: fixed;
   top: 0;
   left: 0;
@@ -19,21 +22,29 @@
   background-color: $background-color;
   opacity: 0;
   @include transform(translate(100%, 0));
-  @include transition(#{opacity map-get($animation, duration) map-get($animation, timing-function),
-  transform 0s map-get($animation, duration) map-get($animation, timing-function)});
+  @include transition(
+    #{opacity map-get($animation, duration) map-get($animation, timing-function),
+    transform 0s map-get($animation, duration)
+      map-get($animation, timing-function)}
+  );
 }
+
 @mixin modal--show() {
   opacity: 1;
   @include transform(translate(0, 0));
-  @include transition(#{opacity map-get($animation, duration) map-get($animation, timing-function)});
+  @include transition(
+    #{opacity map-get($animation, duration) map-get($animation, timing-function)}
+  );
 }
 
 .modal {
   @include modal();
 }
+
 .modal--show {
   @include modal--show();
 }
+
 .modal--overflow {
   @include overflow(auto);
 }
