--- a/_sass/donate.scss
+++ b/_sass/donate.scss
@@ -1,10 +1,35 @@
-.donor-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+/* html 文件在 donate.md */
+
+.payment-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   gap: 20px;
-  margin-top: 20px;
+
+  .payment-item {
+    text-align: center;
+    margin-right: 10px;
+
+    img {
+      height: 150px;
+      width: auto;
+    }
+
+    p {
+      margin-bottom: 10px;
+      font-size: 16px;
+      font-weight: bold;
+    }
+  }
 }
 
-.donor-grid li {
-  list-style-type: none;
-}
+// .donor-grid {
+//   display: grid;
+//   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+//   gap: 20px;
+//   margin-top: 20px;
+
+//   li {
+//     list-style-type: none;
+//   }
+// }
