--- a/_sass/email.scss
+++ b/_sass/email.scss
@@ -1,18 +1,20 @@
-form {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 5px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
+/* html 文件位于 contact.md */
 
-label {
+form {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0px 4px 6px #00000019;
+
+  label {
     font-size: 1.2rem;
     margin-top: 10px;
-}
+  }
 
-input, textarea {
+  input,
+  textarea {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
@@ -20,17 +22,18 @@ input, textarea {
     border-radius: 4px;
     border: 1px solid #ccc;
     font-size: 1rem;
-}
+  }
 
-button {
+  button {
     background-color: #5cb85c;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
 
-button:hover {
-    background-color: #4cae4c;
+    &:hover {
+      background-color: #4cae4c;
+    }
+  }
 }
